SftpServerTests: BASE64Decoder -> apache..Base64